--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,1 +1,8 @@
 app.services.greeting.message: Hello world!2
+
+spring:
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
