--- a/build.gradle
+++ b/build.gradle
@@ -23,12 +23,13 @@ repositories {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compile 'org.springframework.boot:spring-boot-starter-data-jdbc'
     compile 'org.postgresql:postgresql'
     compile 'org.projectlombok:lombok'
     compile 'com.querydsl:querydsl-jpa'
+    compile 'org.flywaydb:flyway-core'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
-//    testCompileOnly 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-//    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'com.querydsl:querydsl-apt'
 }
