add integration tests with Postgres test containers

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ plugins {
     id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
+apply from: './versions.gradle'
+
 sourceSets {
     main {
         java {
@@ -28,8 +30,11 @@ dependencies {
     compile 'org.projectlombok:lombok'
     compile 'com.querydsl:querydsl-jpa'
     compile 'org.flywaydb:flyway-core'
+    compile 'org.springframework.boot:spring-boot-starter-test'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testCompile "org.testcontainers:postgresql:${versions.postgresContainer}"
+    compile "org.testcontainers:postgresql:${versions.postgresContainer}"
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'com.querydsl:querydsl-apt'
 }
